tests/golden/expose-http-and-plain/manifests/nginx-oasp-22-21-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    k8ify.ref-slug: oasp
    k8ify.service: nginx
  name: nginx-oasp-22-21
spec:
  externalTrafficPolicy: Local
  ports:
  - name: "22"
    port: 22
    targetPort: 2222
  - name: "21"
    port: 21
    targetPort: 2221
  selector:
    k8ify.ref-slug: oasp
    k8ify.service: nginx
  type: LoadBalancer
status:
  loadBalancer: {}
