tests/golden/expose-http-and-plain/manifests/nginx-oasp-443-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8ify.ref-slug: oasp
    k8ify.service: nginx
  name: nginx-oasp-443
spec:
  externalTrafficPolicy: Cluster
  healthCheckNodePort: 55667
  ports:
  - name: "443"
    port: 443
    targetPort: 8443
  selector:
    k8ify.ref-slug: oasp
    k8ify.service: nginx
  type: LoadBalancer
status:
  loadBalancer: {}
