tests/golden/expose-http-and-plain/manifests/nginx-oasp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    k8ify.ref-slug: oasp
    k8ify.service: nginx
  name: nginx-oasp
spec:
  rules:
  - host: port80.example.com
    http:
      paths:
      - backend:
          service:
            name: nginx-oasp
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - port80.example.com
    secretName: nginx-oasp
status:
  loadBalancer: {}
