tests/golden/expose-http-and-plain/manifests/nginx-oasp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8ify.ref-slug: oasp
    k8ify.service: nginx
  name: nginx-oasp
spec:
  ports:
  - name: "88"
    port: 88
    targetPort: 8888
  - name: "80"
    port: 80
    targetPort: 8080
  selector:
    k8ify.ref-slug: oasp
    k8ify.service: nginx
status:
  loadBalancer: {}
